--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "reachapp",
   "version": "1.0.0",
   "description": "social media for developers",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server":"nodemon server"
   },
   "author": "keshav",
   "license": "MIT",
